--- a/.reviewboardrc
+++ b/.reviewboardrc
@@ -3,4 +3,6 @@ REPOSITORY = "test-reviewboard"
 REPOSITORY_TYPE = "git"
 BRANCH = "master"
 LAND_DEST_BRANCH = "master"
+OPEN_BROWSER = "true"
+STAMP_WHEN_POSTING = "true
 
